--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@types/d3": "^7.4.3",
     "@types/pdfmake": "^0.2.9",
     "bootstrap": "^5.3.3",
+    "docx": "^9.0.2",
     "jspdf": "^2.5.1",
     "jwt-decode": "^4.0.0",
     "moment": "^2.30.1",
