--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "@angular/platform-browser": "^18.2.4",
     "@angular/platform-browser-dynamic": "^18.2.4",
     "@angular/router": "^18.2.4",
-    "@swimlane/ngx-graph": "^8.4.0",
+    "@swimlane/ngx-graph": "^9.0.1",
     "@types/d3": "^7.4.3",
     "@types/pdfmake": "^0.2.9",
     "bootstrap": "^5.3.3",
@@ -45,6 +45,7 @@
     "@angular/cli": "^18.2.4",
     "@angular/compiler-cli": "^18.2.4",
     "@types/jasmine": "~5.1.0",
+    "@types/mermaid": "^9.1.0",
     "autoprefixer": "^10.4.20",
     "jasmine-core": "~5.1.0",
     "karma": "~6.4.0",
