--- a/package.json
+++ b/package.json
@@ -10,16 +10,17 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^19.0.4",
-    "@angular/cdk": "^19.0.3",
-    "@angular/common": "^19.0.4",
-    "@angular/compiler": "^19.0.4",
-    "@angular/core": "^19.0.4",
-    "@angular/forms": "^19.0.4",
-    "@angular/material": "^19.0.3",
-    "@angular/platform-browser": "^19.0.4",
-    "@angular/platform-browser-dynamic": "^19.0.4",
-    "@angular/router": "^19.0.4",
+    "@angular/animations": "^19.1.4",
+    "@angular/cdk": "^19.1.2",
+    "@angular/common": "^19.1.4",
+    "@angular/compiler": "^19.1.4",
+    "@angular/core": "^19.1.4",
+    "@angular/forms": "^19.1.4",
+    "@angular/material": "^19.1.2",
+    "@angular/material-moment-adapter": "^19.1.2",
+    "@angular/platform-browser": "^19.1.4",
+    "@angular/platform-browser-dynamic": "^19.1.4",
+    "@angular/router": "^19.1.4",
     "@types/d3": "^7.4.3",
     "@types/pdfmake": "^0.2.9",
     "bootstrap": "^5.3.3",
@@ -28,7 +29,8 @@
     "jwt-decode": "^4.0.0",
     "moment": "^2.30.1",
     "moment-timezone": "^0.5.45",
-    "ngx-infinite-scroll": "^18.0.0",
+    "ngx-infinite-scroll": "^19.0.0",
+    "ngx-mat-select-search": "^7.0.10",
     "ngx-toastr": "^19.0.0",
     "pdfmake": "^0.2.9",
     "rxjs": "~7.8.0",
@@ -39,9 +41,9 @@
     "zone.js": "~0.15.0"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^19.0.5",
-    "@angular/cli": "^19.0.5",
-    "@angular/compiler-cli": "^19.0.4",
+    "@angular-devkit/build-angular": "^19.1.5",
+    "@angular/cli": "^19.1.5",
+    "@angular/compiler-cli": "^19.1.4",
     "@types/jasmine": "~5.1.0",
     "@types/mermaid": "^9.1.0",
     "autoprefixer": "^10.4.20",
