correccion validacion copias

--- a/package.json
+++ b/package.json
@@ -22,9 +22,11 @@
     "@angular/platform-browser-dynamic": "^19.1.4",
     "@angular/router": "^19.1.4",
     "@types/d3": "^7.4.3",
+    "@types/humanize-duration": "^3.27.4",
     "@types/pdfmake": "^0.2.9",
     "bootstrap": "^5.3.3",
     "docx": "^9.0.2",
+    "humanize-duration": "^3.32.1",
     "jspdf": "^2.5.1",
     "jwt-decode": "^4.0.0",
     "moment": "^2.30.1",
