--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@angular/platform-browser": "^19.1.4",
     "@angular/platform-browser-dynamic": "^19.1.4",
     "@angular/router": "^19.1.4",
+    "@swimlane/ngx-graph": "^10.0.0-alpha.0",
     "@types/d3": "^7.4.3",
     "@types/humanize-duration": "^3.27.4",
     "@types/pdfmake": "^0.2.9",
