--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "moment-timezone": "^0.5.45",
     "ngx-infinite-scroll": "^19.0.0",
     "ngx-mat-select-search": "^8.0.0",
+    "ngx-sonner": "^3.1.0",
     "ngx-toastr": "^19.0.0",
     "pdfmake": "^0.2.9",
     "rxjs": "~7.8.0",
