--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "@angular/platform-browser": "^20.0.1",
     "@angular/platform-browser-dynamic": "^20.0.1",
     "@angular/router": "^20.0.1",
-    "@swimlane/ngx-graph": "^10.0.0-alpha.0",
+    "@swimlane/ngx-charts": "^23.0.0-alpha.0",
+    "@swimlane/ngx-graph": "^11.0.0-alpha.0",
     "@types/d3": "^7.4.3",
     "@types/humanize-duration": "^3.27.4",
     "@types/pdfmake": "^0.2.9",
@@ -32,7 +33,7 @@
     "jwt-decode": "^4.0.0",
     "moment": "^2.30.1",
     "moment-timezone": "^0.5.45",
-    "ngx-infinite-scroll": "^19.0.0",
+    "ngx-infinite-scroll": "^20.0.0",
     "ngx-mat-select-search": "^8.0.2",
     "ngx-sonner": "^3.1.0",
     "ngx-toastr": "^19.0.0",
@@ -48,6 +49,7 @@
     "@angular/build": "^20.0.1",
     "@angular/cli": "^20.0.1",
     "@angular/compiler-cli": "^20.0.1",
+    "@types/chart.js": "^2.9.41",
     "@types/jasmine": "~5.1.0",
     "@types/mermaid": "^9.1.0",
     "autoprefixer": "^10.4.20",
