--- a/package.json
+++ b/package.json
@@ -27,12 +27,15 @@
     "@types/humanize-duration": "^3.27.4",
     "@types/pdfmake": "^0.2.9",
     "bootstrap": "^5.3.3",
+    "chart.js": "^4.5.0",
+    "chartjs-plugin-datalabels": "^2.2.0",
     "docx": "^9.0.2",
     "humanize-duration": "^3.32.1",
     "jspdf": "^2.5.1",
     "jwt-decode": "^4.0.0",
     "moment": "^2.30.1",
     "moment-timezone": "^0.5.45",
+    "ng2-charts": "^8.0.0",
     "ngx-infinite-scroll": "^20.0.0",
     "ngx-mat-select-search": "^8.0.2",
     "ngx-sonner": "^3.1.0",
