--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@types/humanize-duration": "^3.27.4",
     "@types/pdfmake": "^0.2.9",
     "bootstrap": "^5.3.3",
+    "buffer": "^6.0.3",
     "chart.js": "^4.5.0",
     "chartjs-plugin-datalabels": "^2.2.0",
     "docx": "^9.0.2",
